--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,7 +8,7 @@
             <span aria-hidden="true">in</span>
         </a>
         <span class="footer-separator footer-separator-toggle" aria-hidden="true">•</span>
-        <button class="theme-toggle-footer" type="button" aria-label="Toggle theme">
+        <button class="theme-toggle theme-toggle-footer" type="button" aria-label="Toggle theme">
             <span class="theme-toggle-icon" aria-hidden="true">🌗</span>
         </button>
     </div>
