--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -23,3 +23,4 @@
 @import "themes/theme-celestial";
 @import "themes/theme-artist";
 @import "themes/theme-hyperion";
+@import "themes/theme-bamboo";
