--- a/layouts/_default/smj.html
+++ b/layouts/_default/smj.html
@@ -12,7 +12,7 @@
     {{/* Build stamp for SMJ page */}}
     {{ $buildDate := default now .Site.Params.buildDate }}
     <div class="site-credits" aria-label="Site credits">
-        <p>Built with Hugo and Codex. Last build {{ $buildDate | time.Format "2006-01-02" }}.</p>
+        <p>Built with Hugo and Claude. Last build {{ $buildDate | time.Format "2006-01-02" }}.</p>
     </div>
 </div>
 {{ end }}
