--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -177,14 +177,6 @@
     width: 100%;
   }
 
-  .nav-menu li:first-child a {
-    padding-left: 0;
-  }
-
-  .nav-menu li:last-child a {
-    padding-right: 0;
-  }
-
   .nav-menu a {
     padding: $space-2 $space-1;
 
@@ -199,12 +191,21 @@
     }
   }
 
+  // Keep hover box same size, but align text to edges using negative margin
+  .nav-menu li:first-child a {
+    margin-left: -$space-1;
+  }
+
+  .nav-menu li:last-child a {
+    margin-right: -$space-1;
+  }
+
   .nav-menu li:first-child a.is-active {
-    padding-left: 0;
+    padding-left: $space-1;
   }
 
   .nav-menu li:last-child a.is-active {
-    padding-right: 0;
+    padding-right: $space-1;
   }
 }
 
