Last commit didn't add all the chnages

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -153,6 +153,10 @@
     content: "santiagomj@gmail.com";
   }
 
+  .footer-meta a[href*="github"]::after {
+    content: "GitHub";
+  }
+
   .footer-meta a[href*="linkedin"]::after {
     content: "LinkedIn";
   }
