--- a/layouts/_default/engineering.html
+++ b/layouts/_default/engineering.html
@@ -10,6 +10,7 @@
       {{ .Content }}
     </section>
 
+    {{ partial "cards/technical-skills.html" (dict "Page" .) }}
     {{ partial "cards/experience.html" (dict "Page" .) }}
     {{ partial "cards/education.html" (dict "Page" .) }}
     {{ partial "cards/generic.html" (dict "Page" . "key" "links") }}
