--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
         </a>
         <span class="footer-separator" aria-hidden="true">•</span>
         <a href="https://github.com/santimator" aria-label="GitHub">
-            <span aria-hidden="true">GH</span>
+            <span aria-hidden="true">Git</span>
         </a>
         <span class="footer-separator" aria-hidden="true">•</span>
         <a href="https://www.linkedin.com/in/santiagomorenojaureguizar/" aria-label="LinkedIn">
