--- a/layouts/_default/engineering.html
+++ b/layouts/_default/engineering.html
@@ -11,7 +11,7 @@
     </section>
 
     {{ partial "cards/technical-skills.html" (dict "Page" .) }}
-    {{ partial "cards/experience.html" (dict "Page" .) }}
+    {{ partial "cards/experience-timeline.html" (dict "Page" .) }}
     {{ partial "cards/education.html" (dict "Page" .) }}
     {{ partial "cards/generic.html" (dict "Page" . "key" "links") }}
   </article>
