Rehaul of Personal develompent. Bubles welcomed

--- a/layouts/_default/personal-development.html
+++ b/layouts/_default/personal-development.html
@@ -10,7 +10,7 @@
       {{ .Content }}
     </section>
 
-    {{ partial "cards/generic.html" (dict "Page" . "key" "practices") }}
+    {{ partial "cards/practice-bubbles.html" (dict "Page" .) }}
     {{ partial "cards/generic.html" (dict "Page" . "key" "links") }}
   </article>
 </div>
